# OpenScan3D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  choose_file.cpp  choose_file.h  choose_file.ui  dialog_addpictures.cpp  dialog_addpictures.h  dialog_addpictures.ui  dialog_autorebuild.cpp  dialog_autorebuild.h  dialog_autorebuild.ui  dialog_densifypointcloud.cpp  dialog_densifypointcloud.h  dialog_densifypointcloud.ui  dialog_featurematch.cpp  dialog_featurematch.h  dialog_featurematch.ui  dialog_importvideoframes.cpp  dialog_importvideoframes.cpp.BgPIuX  dialog_importvideoframes.h  dialog_importvideoframes.ui  dialog_sfm.cpp  dialog_sfm.h  dialog_sfm.ui  dialog_texturemesh.cpp  dialog_texturemesh.h  dialog_texturemesh.ui  dialog_trimeshrecon.cpp  dialog_trimeshrecon.h  dialog_trimeshrecon.ui  embedExternalApp.cpp  embedExternalApp.h  extract_keyframes.cpp  extract_keyframes.h  global.cpp  global.h  logindlg.cpp  (+14 more)
Binary/OpenMVG/: openMVG_main_ConvertList  openMVG_main_ExportUndistortedImages  openMVG_main_MatchesToTracks  openMVG_main_PairGenerator  openMVG_main_PointsFiltering  openMVG_main_exportKeypoints  openMVG_main_openMVG2CMPMVS  openMVG_main_openMVG2MVE2  openMVG_main_openMVG2openMVS
Include/: Global.h
libs/: CMakeLists.txt  MVS.h
libs/Common/: AABB.h  AABB.inl  AutoEstimator.h  AutoPtr.h  CMakeLists.txt  CUDA.cpp  CUDA.h  Common.cpp  Common.h  Config.h  ConfigTable.cpp  ConfigTable.h  CriticalSection.h  EventQueue.cpp  EventQueue.h  FastDelegate.h  FastDelegateBind.h  FastDelegateCPP11.h  File.h  Filters.h  HTMLDoc.h  HalfFloat.h  Hash.h  LinkLib.h  List.h  Log.cpp  Log.h  MemFile.h  OBB.h  OBB.inl  Octree.h  Octree.inl  Plane.h  Plane.inl  Queue.h  Random.h  Ray.h  Ray.inl  Rotation.h  Rotation.inl  (+18 more)
libs/IO/: CMakeLists.txt  Common.h  Image.cpp  Image.h  ImageBMP.cpp  ImageBMP.h  ImageDDS.cpp  ImageDDS.h  ImageJPG.cpp  ImageJPG.h  ImagePNG.cpp  ImagePNG.h  ImageSCI.cpp  ImageSCI.h  ImageTGA.cpp  ImageTGA.h  ImageTIFF.cpp  ImageTIFF.h  OBJ.cpp  OBJ.h  PLY.cpp  PLY.h
libs/MVS/: CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  DepthMap.cpp  DepthMap.h  Image.cpp  Image.h  Interface.h  Mesh.cpp  Mesh.h  Platform.cpp  Platform.h  PointCloud.cpp  PointCloud.h  RectsBinPack.cpp  RectsBinPack.h  Scene.cpp  Scene.h  SceneDensify.cpp  SceneDensify.h  SceneReconstruct.cpp  SceneRefine.cpp  SceneRefineCUDA.cpp  SceneTexture.cpp  SemiGlobalMatcher.cpp  SemiGlobalMatcher.h
libs/Math/: CMakeLists.txt  Common.cpp  Common.h  LBP.h
libs/Math/IBFS/: IBFS.cpp  IBFS.h
libs/Math/LMFit/: CHANGELOG  COPYING  lmmin.cpp  lmmin.h
libs/Math/TRWS/: MRFEnergy.h  MRFEnergy.inl  minimize.inl  ordering.inl  treeProbabilities.inl  typePotts.h
libs/Viewer/: CMakeLists.txt  Common.h  Scene.cpp  Scene.h  Viewer.cpp
libs/obj2stl/: CMakeLists.txt  README.md
libs/obj2stl/include/obj2stl/: Converter.h  Coord3.h  FaceVertex.h  ObjModel.h  ObjReader.h  StlModel.h  StlTriangle.h  StlWriter.h
libs/obj2stl/src/: main.cpp
libs/obj2stl/src/obj2stl/: Converter.cpp  ObjModel.cpp  ObjReader.cpp  StlModel.cpp  StlWriter.cpp
libs/openMVG/: CMakeLists.txt
libs/openMVG/openMVG/exif/: CMakeLists.txt
libs/openMVG/openMVG/features/: CMakeLists.txt
libs/openMVG/openMVG/matching/: pairwiseAdjacencyDisplay.hpp
libs/openMVG/openMVG/numeric/: CMakeLists.txt
libs/openMVG/openMVG/system/: CMakeLists.txt
libs/openMVG/openMVG/vector_graphics/: CMakeLists.txt
libs/openMVG/openMVG_Samples/exif_Parsing/: CMakeLists.txt
libs/openMVS/: CMakeLists.txt
libs/openMVS/apps/: CMakeLists.txt
libs/openMVS/apps/TextureMesh/: CMakeLists.txt  TextureMesh.cpp
libs/openMVS/libs/: MVS.h
libs/openMVS/libs/Common/: CMakeLists.txt  Types.h  UtilCUDA.h
libs/openMVS/libs/MVS/: CMakeLists.txt  DepthMap.cpp  Image.cpp  Scene.cpp  SceneDensify.cpp
output/: 00000000_Resection.ply  00000001_Resection.ply  00000002_Resection.ply  DSC_0333.desc  DSC_0333.feat  DSC_0334.desc  DSC_0334.feat  DSC_0335.desc  DSC_0335.feat  DSC_0336.desc  DSC_0336.feat  DSC_0337.desc  DSC_0337.feat  DSC_0338.desc  DSC_0338.feat  DSC_0339.desc  DSC_0339.feat  DSC_0340.desc  DSC_0340.feat  DSC_0341.desc  DSC_0341.feat  DSC_0342.desc  DSC_0342.feat  DSC_0343.desc  DSC_0343.feat  DSC_0344.desc  DSC_0344.feat  DSC_0345.desc  DSC_0345.feat  DSC_0346.desc  DSC_0346.feat  DSC_0347.desc  DSC_0347.feat  DSC_0348.desc  DSC_0348.feat  DSC_0349.desc  DSC_0349.feat  DSC_0350.desc  DSC_0350.feat  Reconstruction_Report.html  (+7 more)
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt  ColorizeStructure.cpp  ColorizedRobustTriangulation.cpp  ComputeFeatures.cpp  ComputeMatches.cpp  DensifyPointCloud.cpp  ExportToOpenMVS.cpp  FilterMatches.cpp  Global.cpp  IntrinsicsAnalysis.cpp  LinuxMessage.cpp  OBJ2STL.cpp  OS3DEngine.cpp  PairGenerator.cpp  README.md  ReconstructMesh.cpp  RefineMesh.cpp  SFM.cpp  StructureFromKnownPoses.cpp  TextureTheMesh.cpp  Utils.cpp  test.cpp  video_devided.h
src/Engine/include/: AutoReconstruction.hpp  Camera.hpp  ColorizeStructure.hpp  ColorizedRobustTriangulation.hpp  ComputeFeatures.hpp  ComputeMatches.hpp  DEFINE.hpp  DensifyPointCloud.hpp  ExportToOpenMVS.hpp  FilterMatches.hpp  Global.h  IntrinsicsAnalysis.hpp  LinuxMessage.hpp  OBJ2STL.hpp  PairGenerator.hpp  README.md  ReconstructMesh.hpp  RefineMesh.hpp  SFM.hpp  StructureFromKnownPoses.hpp  TextureTheMesh.hpp  Utils.hpp  message.hpp
src/Include/Engine/: AutoReconstruction.hpp
src/OpenViewer/: CMakeLists.txt  OpenViewer.cpp
src/ViewRender/: CMakeLists.txt  Camera.cpp  Common.cpp  Image.cpp  J3DViewRender.cpp  Scene.cpp  Viewer.cpp  Viewer.hpp
src/ViewRender/include/: Camera.h  Common.h  Image.h  Scene.h  Window.h
src/Viewer/: CMakeLists.txt  Camera.cpp  Scene.cpp  Viewer.cpp  Window.cpp  resource.h
src/Viewer/include/: Scene.h  Window.h
